# dbackup

./: .gitignore  MANIFEST  Makefile  Makefile.am  config.status  configure  configure.ac
cron/: borgbackup
etc/: patterns
etc/dbackup.d/: dbackup.conf
etc/logrotate.d/: borgbackup  dbackup
lib/Backup/: Duplicity.pm
t/: test_010_Config.t
t/data/: test_01.conf
